Safari z-index fix

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -168,6 +168,7 @@
 .root {
   display: grid;
   max-height: 100lvh;
+  z-index: 1;
 }
 .root::before,
 .root::after {
@@ -190,6 +191,7 @@
 .container {
   position: relative;
   height: 100%;
+  z-index: 2;
 }
 .tvframe,
 .tvbezel,
@@ -202,13 +204,13 @@
   touch-action: none;
 }
 .tvframe {
-  z-index: 6;
+  z-index: 7;
   -webkit-filter: contrast(0.25);
   filter: contrast(0.25);
 }
 .tvbezel,
 .tvglow {
-  z-index: 7;
+  z-index: 8;
 }
 .tvbezel {
   padding: 1rem;
@@ -235,7 +237,7 @@
 .scanlines {
   position: absolute;
   inset: 6%;
-  z-index: 5;
+  z-index: 6;
   background-color: var(--bg);
 }
 .home .scanlines {
@@ -253,19 +255,19 @@
   opacity: 0.5;
 }
 .scanlines::before {
-  z-index: 3;
+  z-index: 4;
   background: -webkit-linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), -webkit-linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
   background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
   background-size: 100% 2px, 3px 100%;
 }
 .scanlines::after {
-  z-index: 4;
+  z-index: 5;
   background: rgba(18, 16, 16, 0.1);
   opacity: 0;
 }
 .screen {
   height: 100%;
-  z-index: 2;
+  z-index: 3;
   overflow: hidden;
   /*margin-inline-end: 1rem;
   padding-block: 3rem;
@@ -288,7 +290,7 @@
   display: grid;
   align-items: center;
   gap: 0.75rem;
-  z-index: 9;
+  z-index: 10;
 }
 .mac::before {
   content: url('/favicon-16x16.png');
@@ -308,12 +310,12 @@
   display: block;
   position: absolute;
   inset: 0;
-  z-index: 10;
+  z-index: 11;
   opacity: 0.7;
 }
 .footer :is(a, button) {
   position: absolute;
-  z-index: 8;
+  z-index: 9;
   transform: rotate(12deg);
   border: 1px inset var(--bg);
   border-radius: 50%;
